config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info CDE",
+                "label": "Info centro de estudiantes",
                 "url": "/info"
             },
             {
