--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
             },
             {
                 "type": "Link",
-                "label": "Projects",
+                "label": "proyectos ",
                 "url": "/projects"
             },
             {
