--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
+                "label": "nosotros ",
                 "url": "/blog"
             }
         ],
