--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,7 +21,7 @@
             {
                 "type": "Link",
                 "label": "nosotros ",
-                "url": "/blog"
+                "url": "/nosotros "
             }
         ],
         "socialLinks": [],
