config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,7 +16,7 @@
             {
                 "type": "Link",
                 "label": "proyectos ",
-                "url": "/projects"
+                "url": "/blog"
             },
             {
                 "type": "Link",
